--- a/style/style.css
+++ b/style/style.css
@@ -71,6 +71,7 @@ nav ul li a:hover::after{
     width: 100%;
     height: 100%;
     background: #d3c7ae; 
+    border: 4px solid #d3c7ae;
 }
 .swiper-slide {
     width: 100%;
@@ -88,7 +89,7 @@ nav ul li a:hover::after{
     background-color:#26712a !important;
 }
 .slideshow-caption{
-    padding-top: 5px;
+    padding-top: 10px;
     margin-top: 0;
     font-size: 15px;
     display: flex;
@@ -98,7 +99,7 @@ nav ul li a:hover::after{
 
 /* ----- about ------ */
 #about{
-    padding: 120px 0;
+    padding: 110px 5%;
     color: #000;
     font-size: 18px;
 }
@@ -113,6 +114,7 @@ nav ul li a:hover::after{
 .about-col-1 img{
     width: 100%;
     border-radius: 15px;
+    border: 4px solid #d3c7ae;
 }
 .about-col-2{
     flex-basis: 60%;
@@ -128,7 +130,7 @@ nav ul li a:hover::after{
     display: flex;
     justify-content: center; 
     align-items: center;
-    margin-top: -50px;
+    margin-top: 10px;
     transition: 0.5s;
 }
 .contact-links a:hover {
