--- a/style/style.css
+++ b/style/style.css
@@ -416,10 +416,12 @@ nav .fa-solid{
     .contact-links a .ai{
         font-size: 30px;
     }
-    .layer h3{
-        font-size: 14px;
+    .layer h3 {
+        font-size: 14px; 
     }
-    
+    .layer p {
+        font-size: 12px; 
+    }    
 }
 
 /* ----- css for large screens ------ */
