--- a/style/style.css
+++ b/style/style.css
@@ -259,12 +259,11 @@ nav ul li a:hover::after{
     width: 100%;
     height: 0;
     background: linear-gradient(#d3c7ae, rgba(241, 227, 198, 0.65));
-    /*background: linear-gradient(rgba(211, 199, 174, 0.9), rgba(241, 227, 198, 0.65));*/
     border-radius: 10px;
     position: absolute;
     left: 0;
     bottom: 0;
-    overflow: hidden;
+    overflow: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -298,6 +297,7 @@ nav ul li a:hover::after{
 .work:hover .layer{
     height: 100%;
 }
+
 /* ----- intrigues ------ */
 #intrigues{
     padding: 50px 0;
@@ -416,12 +416,44 @@ nav .fa-solid{
     .contact-links a .ai{
         font-size: 30px;
     }
-    .layer h3 {
-        font-size: 12px; 
+    .layer{
+        width: 100%;
+        height: 0;
+        background: linear-gradient(#d3c7ae, rgba(241, 227, 198, 0.65));
+        border-radius: 10px;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        overflow: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding: 0 40px;
+        text-align: center;
+        font-size: 14px;
+        color: #26712a;
+        transition: height 0.5s;
+        max-height: 100%;
     }
-    .layer p {
-        font-size: 10px; 
-    }    
+    .layer h3{
+        font-weight: 500;
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+    .layer a{
+        margin-top: 3px;
+        color: #26712a;
+        text-decoration: none;
+        font-size: 12px;
+        line-height: 25px;
+        background: #d3c7ae;
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        text-align: center;
+    }
+    
 }
 
 /* ----- css for large screens ------ */
