--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,9 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    background: #ebddc1;
+    /* background: #ebddc1; */
+    background: #efe6d5;
+    /* background: #EFE7D9; */
     color:  #26712a;
 }
 #header{
