--- a/style/style.css
+++ b/style/style.css
@@ -9,8 +9,8 @@ html{
 }
 body{
     /* background: #ebddc1; */
-    background: #efe6d5;
-    /* background: #EFE7D9; */
+    /* background: #efe6d5; */
+    background: #EFE7D9;
     color:  #26712a;
 }
 #header{
