--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,7 @@ body{
     /* background: #ebddc1; */
     /* background: #efe6d5; */
     background: #EFE7D9;
+    /* background: #d3c7ae; */
     color:  #26712a;
 }
 #header{
@@ -72,7 +73,7 @@ nav ul li a:hover::after{
 .slideshow-container {
     width: 100%;
     height: 100%;
-    background: #d3c7ae; 
+    background: #EFE7D9;
     border: 4px solid #d3c7ae;
 }
 .swiper-slide {
@@ -101,7 +102,7 @@ nav ul li a:hover::after{
 
 /* ----- about ------ */
 #about{
-    padding: 110px 5%;
+    padding: 60px 5%;
     color: #000;
     font-size: 18px;
 }
@@ -111,15 +112,15 @@ nav ul li a:hover::after{
     flex-wrap: wrap;
 }
 .about-col-1{
-    flex-basis: 35%;
+    flex-basis: 25%;
 }
 .about-col-1 img{
     width: 100%;
     border-radius: 15px;
-    border: 4px solid #d3c7ae;
+    border: 4px solid #d4cab5;
 }
 .about-col-2{
-    flex-basis: 60%;
+    flex-basis: 70%;
 }
 .sub-title{
     font-size: 40px;
@@ -231,7 +232,7 @@ nav ul li a:hover::after{
 
 /* ----- Portfolio ------ */
 #portolio{
-    padding: 5px 0;
+    padding: 100px 0;
 }
 #portfolio .container {
     /* max-width: 1500px;  */
@@ -255,12 +256,12 @@ nav ul li a:hover::after{
     border-radius: 10px;
     display: block;
     transition: transform 0.5s;
-    border: 4px solid #d3c7ae;
+    border: 4px solid #d4cab5;
 }
 .layer{
     width: 100%;
     height: 0;
-    background: linear-gradient(#d3c7ae, rgba(241, 227, 198, 0.65));
+    background: linear-gradient(#d4cab5, rgba(241, 227, 198, 0.65));
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -287,7 +288,7 @@ nav ul li a:hover::after{
     text-decoration: none;
     font-size: 18px;
     line-height: 40px;
-    background: #d3c7ae;
+    background: #d4cab5;
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -302,7 +303,7 @@ nav ul li a:hover::after{
 
 /* ----- intrigues ------ */
 #intrigues{
-    padding: 50px 0;
+    padding: 100px 0;
 }
 #intrigues .container {
     /* max-width: 1500px;  */
@@ -316,7 +317,7 @@ nav ul li a:hover::after{
     margin-top: 50px;
 }
 .intrigues-list div{
-    background: #d3c7ae;
+    background: #d4cab5;
     padding: 40px;
     font-size: 15px;
     font-weight: 300;
@@ -346,10 +347,10 @@ nav ul li a:hover::after{
 .intrigues-list div:hover{
     background: #26712a;
     transform: translateY(-10px);
-    color: #d3c7ae;
+    color: #d4cab5;
 }
 .intrigues-list div:hover a {
-    color: #d3c7ae;
+    color: #d4cab5;
 }
 
 /* ----- css for small screens ------ */
@@ -373,7 +374,7 @@ nav .fa-solid{
         font-size: 25px;
     }
     nav ul{
-        background: #d3c7ae;
+        background: #d4cab5;
         position: fixed;
         top: 0;
         right: -200px;
@@ -421,7 +422,7 @@ nav .fa-solid{
     .layer{
         width: 100%;
         height: 0;
-        background: linear-gradient(#d3c7ae, rgba(241, 227, 198, 0.65));
+        background: linear-gradient(#d4cab5, rgba(241, 227, 198, 0.65));
         border-radius: 10px;
         position: absolute;
         left: 0;
@@ -449,7 +450,7 @@ nav .fa-solid{
         text-decoration: none;
         font-size: 12px;
         line-height: 25px;
-        background: #d3c7ae;
+        background: #d4cab5;
         width: 25px;
         height: 25px;
         border-radius: 50%;
