added notes page

--- a/style/photography_style.css
+++ b/style/photography_style.css
@@ -5,7 +5,8 @@
     font-family: 'poppins', sans-serif;
 }
 body{
-    background: #ebddc1;
+    /* background: #ebddc1; */
+    background: #EFE7D9;
     color:  #26712a;
 }
 #header{
