--- a/style/prj_mth_style.css
+++ b/style/prj_mth_style.css
@@ -8,7 +8,8 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    background: #ebddc1;
+    /* background: #ebddc1; */
+    background: #EFE7D9;
     color:  #26712a;
 }
 #header{
