--- a/style/style.css
+++ b/style/style.css
@@ -301,6 +301,7 @@ nav ul li a:hover::after{
 /* ----- intrigues ------ */
 #intrigues{
     padding: 100px 0;
+    padding-bottom: max(100px, 45vh);
 }
 #intrigues .container {
     /* max-width: 1500px;  */
