--- a/style/style.css
+++ b/style/style.css
@@ -98,6 +98,7 @@ nav ul li a:hover::after{
 }
 
 /* ----- about ------ */
+
 #about{
     padding: 60px 5%;
     color: #000;
@@ -111,11 +112,6 @@ nav ul li a:hover::after{
 .about-col-1{
     flex-basis: 25%;
 }
-/* .about-col-1 img{
-    width: 100%;
-    border-radius: 15px;
-    border: 4px solid #d4cab5;
-} */
 .about-col-1 img{
     width: min(325px, 100%);
     height: auto;
@@ -124,10 +120,15 @@ nav ul li a:hover::after{
     display: block;
     margin: 0 auto;
 }
-
-
 .about-col-2{
     flex-basis: 70%;
+}
+@media screen and (min-width: 1200px){
+    .about-col-2 .about-intro{
+        max-width: 70ch;
+        margin-right: auto;
+        font-size: 1.05rem;
+    }
 }
 .sub-title{
     font-size: 40px;
